--- a/packages/react-ui/src/components/Swap/SwapInputRow/styles.less
+++ b/packages/react-ui/src/components/Swap/SwapInputRow/styles.less
@@ -72,6 +72,7 @@
 .mobile-site-content {
   .swap-input-row {
     .swap-input-row-footer {
+      background-color: red;
       height: 20px;
     }
   }
