--- a/packages/react-ui/src/components/Swap/SwapInputRow/styles.less
+++ b/packages/react-ui/src/components/Swap/SwapInputRow/styles.less
@@ -1,9 +1,8 @@
 .swap-input-row {
   padding: 20px 12px;
   border-radius: 6px;
-  background-color: var(--ant-input-bg-color);
-  border: 1px solid var(--ant-input-bg-color);
-  transition: border-color 0.2s;
+  background-color: #F7F7F9;
+  // transition: border-color 0.2s;
   display: flex;
   flex-direction: column;
   gap: 6px;
@@ -56,15 +55,16 @@
       width: 45px;
       height: 20px;
       margin-left: 8px;
-      color: var(--ant-primary-color);
+      color: #5B8EF4;
       cursor: pointer;
       font-size: 13px;
-      border: 1px solid var(--ant-primary-color);
+      border: 1px solid #5B8EF4;
       border-radius: 4px;
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
+      // display: inline-flex;
+      // align-items: center;
+      // justify-content: center;
       font-weight: 500;
+      box-shadow: none;
     }
   }
 }
