--- a/packages/react-ui/src/components/Swap/SwapPanel/styles.less
+++ b/packages/react-ui/src/components/Swap/SwapPanel/styles.less
@@ -1,5 +1,8 @@
 .swap-panel {
   position: relative;
+  padding: 24px 16px;
+  width: 375px;
+  background-color: aquamarine;
 
   .common-question {
     width: 16px;
@@ -18,7 +21,7 @@
     .route-empty-warning-icon {
       margin-right: 4px;
       display: flex;
-      background-image: url('../../../../assets/icons/icon-notification-warning.svg');
+      // background-image: url('../../../../assets/icons/icon-notification-warning.svg');
       width: 16px;
       height: 16px;
       background-size: 100% 100%;
@@ -32,6 +35,13 @@
 
   .swap-btn-wrap {
     padding-top: 30px;
+    .common-button.ant-btn.ant-btn-default {
+      background-color: #5B8EF4;
+      color: #fff;
+      width: 100%;
+      height: 48px;
+      border-radius: 24px;
+    }
   }
 
   .swap-btn {
@@ -53,8 +63,12 @@
   }
 
   .swap-select-token-btn.common-button.ant-btn.ant-btn-default {
-    background-color: #2a2e3a;
+    background-color: #5B8EF4;
+    color: #fff;
     margin-left: 8px;
+    .swap-select-token-btn-selected {
+      background-color: #DEE2E8;
+    }
     .ant-image {
       margin-right: 0;
     }
@@ -69,7 +83,21 @@
     // background-color: ;
 
     .swap-token-switch-btn {
+      width: 36px;
+      height: 36px;
+      border-radius: 50%;
+      border: 3px solid #fff;
+      background-color: #F7F7F9;
       cursor: pointer;
+      .portkey-swap-ui-common-svg {
+        transform: rotate(-90deg);
+        width: 16px;
+        height: 16px;
+        svg {
+          width: 100%;
+          height: 100%;
+        }
+      }
       .swap-token-switch-btn-default {
         display: block;
       }
@@ -84,6 +112,41 @@
       .swap-token-switch-btn-hover {
         display: block;
       }
+    }
+  }
+
+  .swap-price-swap {
+    padding: 24px 0 16px;
+    .single-price-swap {
+      font-size: 16px;
+      line-height: 24px;
+      color: #25272A;
+    }
+    .icon-price-switch-icon {
+      margin-left: 4px;
+      svg {
+        fill: black;
+      }
+    }
+    .circle-process-warp {
+      margin-left: 16px;
+    }
+    .icon-arrow-up2-icon.rotate-icon {
+      transform: rotate(180deg);
+    }
+  }
+
+  .swap-price-swap-info {
+    gap: 12px;
+    font-size: 14px;
+    line-height: 22px;
+    .price-swap-info-label {
+      margin-right: 4px;
+      color: #515A62;
+    }
+    .price-swap-info-value {
+      font-weight: 500;
+      color: #25272A;
     }
   }
 
