--- a/packages/react-ui/src/assets/theme/common-class.less
+++ b/packages/react-ui/src/assets/theme/common-class.less
@@ -1,103 +1,103 @@
 // flex
-.portkey-swap-ui-flex {
+.portkey-swap-flex {
   display: flex;
 }
-.portkey-swap-ui-flex-1 {
+.portkey-swap-flex-1 {
   flex: 1;
 }
-.portkey-swap-ui-flex-shrink-0 {
+.portkey-swap-flex-shrink-0 {
   flex-shrink: 0;
 }
-.portkey-swap-ui-flex-none {
+.portkey-swap-flex-none {
   flex: none;
 }
-.portkey-swap-ui-flex-row {
+.portkey-swap-flex-row {
   display: flex;
   flex-direction: row;
 }
-.portkey-swap-ui-flex-column {
+.portkey-swap-flex-column {
   display: flex;
   flex-direction: column;
 }
-.portkey-swap-ui-align-end {
+.portkey-swap-align-end {
   align-items: flex-end;
 }
-.portkey-swap-ui-flex-column-center {
+.portkey-swap-flex-column-center {
   align-items: center;
-  .portkey-swap-ui-flex-column();
+  .portkey-swap-flex-column();
 }
-.portkey-swap-ui-flex-row-wrap {
+.portkey-swap-flex-row-wrap {
   flex-wrap: wrap;
-  .portkey-swap-ui-flex-row();
+  .portkey-swap-flex-row();
 }
-.portkey-swap-ui-flex-row-center {
+.portkey-swap-flex-row-center {
   align-items: center;
-  .portkey-swap-ui-flex-row();
+  .portkey-swap-flex-row();
 }
-.portkey-swap-ui-flex-row-content-center {
+.portkey-swap-flex-row-content-center {
   justify-content: center;
-  .portkey-swap-ui-flex-row();
+  .portkey-swap-flex-row();
 }
-.portkey-swap-ui-row-center {
+.portkey-swap-row-center {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
 }
-.portkey-swap-ui-column-center {
+.portkey-swap-column-center {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-.portkey-swap-ui-flex-center {
+.portkey-swap-flex-center {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.portkey-swap-ui-flex-row-content-end {
+.portkey-swap-flex-row-content-end {
   justify-content: flex-end;
-  .portkey-swap-ui-flex-row();
+  .portkey-swap-flex-row();
 }
-.portkey-swap-ui-flex-row-between {
+.portkey-swap-flex-row-between {
   justify-content: space-between;
-  .portkey-swap-ui-flex-row();
+  .portkey-swap-flex-row();
 }
-.portkey-swap-ui-flex-row-center-between {
+.portkey-swap-flex-row-center-between {
   justify-content: space-between;
-  .portkey-swap-ui-flex-row-center();
+  .portkey-swap-flex-row-center();
 }
-.portkey-swap-ui-flex-column-between {
+.portkey-swap-flex-column-between {
   justify-content: space-between;
-  .portkey-swap-ui-flex-column();
+  .portkey-swap-flex-column();
 }
-.portkey-swap-ui-flex-row-start {
+.portkey-swap-flex-row-start {
   align-items: flex-start;
-  .portkey-swap-ui-flex-row();
+  .portkey-swap-flex-row();
 }
 
 // other
-.portkey-swap-ui-cursor-pointer {
+.portkey-swap-cursor-pointer {
   cursor: pointer;
 }
-.portkey-swap-ui-margin-auto {
+.portkey-swap-margin-auto {
   margin: auto;
 }
-.portkey-swap-ui-text-center {
+.portkey-swap-text-center {
   text-align: center;
 }
-.portkey-swap-ui-text-right {
+.portkey-swap-text-right {
   text-align: right;
 }
-.portkey-swap-ui-text-underline {
+.portkey-swap-text-underline {
   text-decoration: underline;
 }
-.portkey-swap-ui-text-underline-none {
+.portkey-swap-text-underline-none {
   text-decoration: none;
 }
-.portkey-swap-ui-text-link {
-  .portkey-swap-ui-text-underline();
-  .portkey-swap-ui-cursor-pointer();
+.portkey-swap-text-link {
+  .portkey-swap-text-underline();
+  .portkey-swap-cursor-pointer();
   &:hover {
     color: var(--etransfer-ui-hover);
   }
@@ -105,9 +105,9 @@
     color: var(--etransfer-ui-click);
   }
 }
-.portkey-swap-ui-text-break {
+.portkey-swap-text-break {
   word-break: break-all;
 }
-.portkey-swap-ui-position-relative {
+.portkey-swap-position-relative {
   position: relative;
 }
