--- a/packages/react-ui/src/components/Swap/SwapPanel/styles.less
+++ b/packages/react-ui/src/components/Swap/SwapPanel/styles.less
@@ -88,7 +88,7 @@
       border: 3px solid #fff;
       background-color: #F7F7F9;
       cursor: pointer;
-      .portkey-swap-ui-common-svg {
+      .portkey-swap-common-svg {
         transform: rotate(-90deg);
         width: 16px;
         height: 16px;
@@ -130,8 +130,11 @@
     .circle-process-warp {
       margin-left: 16px;
     }
-    .icon-arrow-up2-icon.rotate-icon {
-      transform: rotate(180deg);
+    .icon-arrow-up2-icon {
+      cursor: pointer;
+      &.rotate-icon {
+        transform: rotate(180deg);
+      }
     }
   }
 
