--- a/packages/react-ui/src/components/Swap/SwapSelectTokenButton/styles.less
+++ b/packages/react-ui/src/components/Swap/SwapSelectTokenButton/styles.less
@@ -12,7 +12,7 @@
     justify-content: center;
     text-align: center;
     vertical-align: middle;
-    margin-left: 12px;
+    // margin-left: 12px;
   }
 
   .select-token-icon {
@@ -23,6 +23,10 @@
 
 .select-token-btn-label-wrap {
   text-align: left;
+}
+
+.select-token-content {
+  flex-wrap: nowrap;
 }
 
 .select-token-middle {
