--- a/packages/react-ui/src/assets/theme/constants.less
+++ b/packages/react-ui/src/assets/theme/constants.less
@@ -71,12 +71,14 @@
 @disable-text: #d6d6d6;
 @white-text: #ffffff;
 @border: #e0e0e0;
+@border1: #C5CBD5;
 @dash: #c4c4c4;
 @dividers: #f0f0f0;
 @normal-bg: #f5f5f5;
 @hover-bg: #f8f8f8;
 @click-bg: #eaeaea;
 @page-bg: #ffffff;
+@placeholder: #B6BABF;
 
 // z-index
 @zIndex-1: 1;
@@ -131,12 +133,12 @@
 }
 
 .form-item-value {
-  color: var(--etransfer-ui-primary-text);
+  color: var(--awaken-ui-primary-text);
   font-size: 16px;
   line-height: 1.5;
   .font-medium();
   &::placeholder {
-    color: var(--etransfer-ui-disable-text);
+    color: var(--awaken-ui-disable-text);
     font-size: 16px;
     line-height: 1.5;
     .font-medium();
