--- a/packages/react-ui/src/assets/theme/customer-theme.less
+++ b/packages/react-ui/src/assets/theme/customer-theme.less
@@ -4,8 +4,8 @@ html,
 body {
   overflow-x: hidden;
   overflow-y: auto;
-  background-color: var(--etransfer-ui-page-bg);
-  min-width: var(--etransfer-ui-page-min-width);
+  background-color: var(--awaken-ui-page-bg);
+  min-width: var(--awaken-ui-page-min-width);
   font-size: 14px;
 
   // Solve the font loading error problem caused by the UI framework taking effect in the first place
@@ -54,9 +54,9 @@ input[type='number'] {
 }
 
 // selected option
-.etransfer-ant-select-dropdown.drop-wrap {
-  .etransfer-ant-select-item-option-selected {
-    color: var(--etransfer-ui-normal) !important;
+.awaken-ant-select-dropdown.drop-wrap {
+  .awaken-ant-select-item-option-selected {
+    color: var(--awaken-ui-normal) !important;
     background: none !important;
   }
 }
