--- a/packages/react-ui/src/assets/theme/html-theme.less
+++ b/packages/react-ui/src/assets/theme/html-theme.less
@@ -2,57 +2,60 @@
 
 html {
   /* color */
-  --etransfer-ant-primary-color: @brand;
-  --etransfer-ui-brand: @brand;
-  --etransfer-ui-hover: @hover;
-  --etransfer-ui-normal: @normal;
-  --etransfer-ui-click: @click;
-  --etransfer-ui-disable: @disable;
-  --etransfer-ui-brand-bg: @brand-bg;
-  --etransfer-ui-brand-disable: @brand-disable;
+  --awaken-ant-primary-color: @brand;
+  --awaken-ui-brand: @brand;
+  --awaken-ui-hover: @hover;
+  --awaken-ui-normal: @normal;
+  --awaken-ui-click: @click;
+  --awaken-ui-disable: @disable;
+  --awaken-ui-brand-bg: @brand-bg;
+  --awaken-ui-brand-disable: @brand-disable;
 
-  --etransfer-ui-link: @link;
-  --etransfer-ui-blue-bg: @blue-bg;
-  --etransfer-ui-success: @success;
-  --etransfer-ui-success-bg: @success-bg;
-  --etransfer-ui-warning: @warning;
-  --etransfer-ui-warning-bg: @warning-bg;
-  --etransfer-ui-error: @error;
-  --etransfer-ui-error-bg: @error-bg;
+  --awaken-ui-link: @link;
+  --awaken-ui-blue-bg: @blue-bg;
+  --awaken-ui-success: @success;
+  --awaken-ui-success-bg: @success-bg;
+  --awaken-ui-warning: @warning;
+  --awaken-ui-warning-bg: @warning-bg;
+  --awaken-ui-error: @error;
+  --awaken-ui-error-bg: @error-bg;
 
-  --etransfer-ui-error-normal: @error-normal;
-  --etransfer-ui-error-hover: @error-hover;
-  --etransfer-ui-error-click: @error-click;
-  --etransfer-ui-error-disable: @error-disable;
+  --awaken-ui-error-normal: @error-normal;
+  --awaken-ui-error-hover: @error-hover;
+  --awaken-ui-error-click: @error-click;
+  --awaken-ui-error-disable: @error-disable;
 
-  --etransfer-ui-primary-text: @primary-text;
-  --etransfer-ui-secondary-text: @secondary-text;
-  --etransfer-ui-third-text: @third-text;
-  --etransfer-ui-disable-text: @disable-text;
-  --etransfer-ui-white-text: @white-text;
-  --etransfer-ui-border: @border;
-  --etransfer-ui-dash: @dash;
-  --etransfer-ui-dividers: @dividers;
-  --etransfer-ui-normal-bg: @normal-bg;
-  --etransfer-ui-hover-bg: @hover-bg;
-  --etransfer-ui-click-bg: @click-bg;
-  --etransfer-ui-page-bg: @page-bg;
+  --awaken-ui-primary-text: @primary-text;
+  --awaken-ui-secondary-text: @secondary-text;
+  --awaken-ui-third-text: @third-text;
+  --awaken-ui-disable-text: @disable-text;
+  --awaken-ui-white-text: @white-text;
+  --awaken-ui-border: @border;
+  --awaken-ui-border1: @border1;
+  --awaken-ui-dash: @dash;
+  --awaken-ui-dividers: @dividers;
+  --awaken-ui-normal-bg: @normal-bg;
+  --awaken-ui-hover-bg: @hover-bg;
+  --awaken-ui-click-bg: @click-bg;
+  --awaken-ui-page-bg: @page-bg;
+  --awaken-ui-placeholder :@placeholder
+
 
   /* z-index */
-  --etransfer-ui-zIndex-1: @zIndex-1;
-  --etransfer-ui-zIndex-10: @zIndex-10;
-  --etransfer-ui-zIndex-100: @zIndex-100;
-  --etransfer-ui-zIndex-300: @zIndex-300;
+  --awaken-ui-zIndex-1: @zIndex-1;
+  --awaken-ui-zIndex-10: @zIndex-10;
+  --awaken-ui-zIndex-100: @zIndex-100;
+  --awaken-ui-zIndex-300: @zIndex-300;
 
   /* font */
-  --etransfer-ui-font-family-semibold: @font-family-semibold;
-  --etransfer-ui-font-family-medium: @font-family-medium;
-  --etransfer-ui-font-family-regular: @font-family-regular;
+  --awaken-ui-font-family-semibold: @font-family-semibold;
+  --awaken-ui-font-family-medium: @font-family-medium;
+  --awaken-ui-font-family-regular: @font-family-regular;
 
-  --etransfer-ui-font-weight-semibold: @font-weight-semibold;
-  --etransfer-ui-font-weight-medium: @font-weight-medium;
-  --etransfer-ui-font-weight-regular: @font-weight-regular;
+  --awaken-ui-font-weight-semibold: @font-weight-semibold;
+  --awaken-ui-font-weight-medium: @font-weight-medium;
+  --awaken-ui-font-weight-regular: @font-weight-regular;
 
   /* width */
-  --etransfer-ui-page-min-width: 360px;
+  --awaken-ui-page-min-width: 360px;
 }
