--- a/packages/react-ui/src/components/CommonInput/index.less
+++ b/packages/react-ui/src/components/CommonInput/index.less
@@ -1,5 +1,5 @@
 .common-input {
-  background-color: var(--ant-input-bg-color) !important;
+  background-color: var(--ant-input-bg-color);
   padding: 0 12px;
   border-radius: 4px;
   height: 40px;
@@ -66,7 +66,7 @@
   }
 
   &::placeholder {
-    color: var(--ant-black-font-color-3);
+    color: var(--awaken-ui-placeholder);
   }
 
   &-center {
@@ -78,6 +78,6 @@
 }
 
 ::placeholder {
-  color: var(--ant-black-font-color-3) !important;
+  color: var(--awaken-ui-placeholder);
   font-size: 14px;
 }
