--- a/packages/react-ui/src/components/CommonModal/index.less
+++ b/packages/react-ui/src/components/CommonModal/index.less
@@ -6,13 +6,14 @@
   .ant-modal-content,
   .ant-modal-header {
     border-radius: 8px;
+    padding: 0;
   }
 
   .ant-modal-content,
   .ant-modal-header,
   .ant-drawer-content,
   .ant-drawer-header {
-    background-color: var(--ant-container-bg-color);
+    background-color: #fff;
   }
 
   .ant-modal-header {
@@ -83,7 +84,6 @@
   }
 
   .ant-modal-body {
-    padding: 16px 24px 32px;
     line-height: 1;
   }
 
