chore: 🤖 select modal

--- a/packages/react-ui/src/components/CommonButton/index.less
+++ b/packages/react-ui/src/components/CommonButton/index.less
@@ -1,7 +1,7 @@
 .common-button.ant-btn {
-  height: 40px;
+  height: 48px;
+  border-radius: 24px;
   padding: 0 24px;
-  border-radius: 4px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -15,8 +15,8 @@
 
   &.ant-btn-default {
     border: none;
-    color: var(--ant-black-font-color-1);
-    background-color: var(--ant-button-gray-color);
+    color: #ffffff;
+    background-color: #5b8ef4;
     &:hover {
       background-color: var(--ant-button-gray-hover-color);
     }
