--- a/packages/react-ui/src/components/Swap/components/InputRow/index.less
+++ b/packages/react-ui/src/components/Swap/components/InputRow/index.less
@@ -53,13 +53,12 @@
   }
   .swap-input-row3 {
     margin-top: 6px;
-    .value-in-usd, .balance-show, .percent-show {
+    .value-in-usd, .balance-show, .usd-suffix-show {
       font-size: 12px;
       line-height: 18px;
       color: #515A62;
     }
-    .percent-show {
-      color: #B34B4B;
+    .usd-suffix-show {
       margin-left: 8px;
     }
     .show-max {
