--- a/packages/react-ui/src/components/Swap/components/SwapPanel/index.less
+++ b/packages/react-ui/src/components/Swap/components/SwapPanel/index.less
@@ -84,6 +84,7 @@
     }
     .icon-price-switch-icon {
       margin-left: 4px;
+      cursor: pointer;
       svg {
         fill: black;
       }
@@ -109,6 +110,12 @@
     .price-swap-info-value {
       font-weight: 500;
       color: #25272A;
+    }
+    .portkey-swap-common-svg {
+      cursor: pointer;
+    }
+    .icon-arrow-up2-icon {
+      transform: rotate(90deg);
     }
   }
 }
