--- a/packages/react-ui/src/components/CircleProcess/styles.less
+++ b/packages/react-ui/src/components/CircleProcess/styles.less
@@ -7,7 +7,7 @@
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    border: 2px solid #5685ff;
+    border: 2px solid #DEE2E8;
     border-top-color: transparent;
     border-right-color: transparent;
     transform: rotate(45deg);
@@ -18,7 +18,7 @@
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    border: 2px solid #5685ff;
+    border: 2px solid #DEE2E8;
     border-bottom-color: transparent;
     border-left-color: transparent;
     transform: rotate(45deg);
@@ -29,7 +29,7 @@
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    border: 2px solid #393d47;
+    border: 2px solid #5685ff;
     border-top-color: transparent;
     border-right-color: transparent;
     z-index: 1;
@@ -68,13 +68,13 @@
 @keyframes circle-process-change-color {
   0%,
   50% {
-    border-color: #5685ff;
+    border-color: #DEE2E8;
     border-bottom-color: transparent;
     border-left-color: transparent;
   }
   50.01%,
   100% {
-    border-color: #393d47;
+    border-color: #5685ff;
     border-bottom-color: transparent;
     border-left-color: transparent;
   }
