--- a/packages/react-ui/src/components/CommonTooltip/styles.less
+++ b/packages/react-ui/src/components/CommonTooltip/styles.less
@@ -22,7 +22,7 @@
 
 
 .common-question.anticon {
-  color: var(--ant-black-font-color-3);
+  color: #5B8EF4;
 }
 
 .common-tooltip {
@@ -31,8 +31,8 @@
   }
   .ant-tooltip-inner {
     padding: 12px 16px;
-    background-color: var(--ant-alert-bg-color);
-    color: var(--ant-black-font-color-1);
+    background-color: #FFFFFF;
+    color: #515A62;
     font-size: 12px;
     line-height: 18px;
     max-width: 240px;
@@ -40,7 +40,7 @@
   }
   .ant-tooltip-arrow-content {
     &::before {
-      background: var(--ant-alert-bg-color);
+      background: #FFFFFF;
     }
   }
 }
