--- a/packages/react-ui/src/components/Swap/components/SwapSettingsModal/styles.less
+++ b/packages/react-ui/src/components/Swap/components/SwapSettingsModal/styles.less
@@ -2,7 +2,6 @@
 
 .transactions-settings-modal {
   width: 430px !important;
-  box-shadow: 0 0 24px 0 rgb(0 0 0 / 50%);
 
   .ant-drawer-header {
     border-bottom: none;
@@ -22,16 +21,17 @@
   }
 
   .fee-item {
-    width: 58px;
-    height: 36;
+    width: 72px;
+    height: 36px;
     line-height: 34px;
-    border: 1px solid #393d47;
+    border: 1px solid #dee2e8;
     border-radius: 4px;
     text-align: center;
     cursor: pointer;
     transition: all 0.3s;
     &-ative {
-      border-color: var(--ant-primary-color);
+      border-color: #5b8ef4;
+      color: #5b8ef4;
     }
     &-mobile {
       width: 64px;
@@ -41,6 +41,11 @@
   .fee-input {
     height: 36px;
     border-radius: 4px;
+    border: 1px solid #dee2e8;
+  }
+
+  .ant-input-affix-wrapper-focused {
+    border-color: #5b8ef4;
   }
 
   .mins-input {
@@ -61,7 +66,7 @@
 }
 
 .confirm-modal-btnWrap {
-  padding-top: 30px;
+  padding-top: 20px;
   width: 100%;
   .common-button.ant-btn {
     width: 100%;
@@ -70,5 +75,15 @@
     width: 100%;
     height: 48px;
     border-radius: 24px;
+  }
+}
+
+.tips-wrap {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+
+  .price-swap-info-label {
+    margin-right: 8px;
   }
 }
