feat: 🎸 confirm modal

--- a/packages/react-ui/src/components/Swap/components/SwapConfirmModal/styles.less
+++ b/packages/react-ui/src/components/Swap/components/SwapConfirmModal/styles.less
@@ -5,7 +5,11 @@
   }
 
   .ant-modal-body {
-    padding: 0 16px 24px;
+    padding: 0;
+  }
+
+  .content-wrap {
+    padding: 0 24px 24px;
   }
 
   .swap-confirm-modal-content {
@@ -37,4 +41,5 @@
     // margin-top: 24px;
     gap: 6px;
   }
+
 }
