--- a/packages/react-ui/src/components/Font/index.less
+++ b/packages/react-ui/src/components/Font/index.less
@@ -1,4 +1,140 @@
 .default-font-style {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
+}
+
+.font-weight-regular {
+  font-weight: 400;
+}
+
+.font-weight-medium {
+  font-weight: 600;
+}
+
+.font-weight-bold {
+  font-weight: 800;
+}
+
+.font-size-10 {
+  font-size: 10px;
+}
+
+.font-size-12 {
+  font-size: 12px;
+}
+
+.font-size-14 {
+  font-size: 14px;
+}
+
+.font-size-16 {
+  font-size: 16px;
+}
+
+.font-size-18 {
+  font-size: 18px;
+}
+
+.font-size-20 {
+  font-size: 20px;
+}
+
+.font-size-22 {
+  font-size: 22px;
+}
+
+.font-size-24 {
+  font-size: 24px;
+}
+
+.font-size-32 {
+  font-size: 32px;
+}
+
+.font-size-40 {
+  font-size: 40px;
+}
+
+.line-height-12 {
+  line-height: 12px;
+}
+
+.line-height-14 {
+  line-height: 14px;
+}
+
+.line-height-16 {
+  line-height: 16px;
+}
+
+.line-height-18 {
+  line-height: 18px;
+}
+
+.line-height-20 {
+  line-height: 20px;
+}
+
+.line-height-22 {
+  line-height: 22px;
+}
+
+.line-height-24 {
+  line-height: 24px;
+}
+
+.line-height-26 {
+  line-height: 26px;
+}
+
+.line-height-28 {
+  line-height: 28px;
+}
+
+.line-height-30 {
+  line-height: 30px;
+}
+
+.line-height-32 {
+  line-height: 32px;
+}
+
+.line-height-36 {
+  line-height: 36px;
+}
+
+.line-height-40 {
+  line-height: 40px;
+}
+
+.line-height-48 {
+  line-height: 48px;
+}
+
+.text-align-left {
+  text-align: left;
+}
+
+.text-align-center {
+  text-align: center;
+}
+
+.text-align-right {
+  text-align: right;
+}
+
+.height-20 {
+  height: 20px;
+  overflow: hidden;
+}
+.font-size-0 {
+  font-size: 0;
+}
+
+.word-break-all {
+  word-break: break-all;
+}
+
+.align-self-center {
+  align-self: center;
 }
