--- a/packages/react-ui/src/components/Swap/components/SwapOrderRouting/styles.less
+++ b/packages/react-ui/src/components/Swap/components/SwapOrderRouting/styles.less
@@ -7,10 +7,28 @@
 
   .swap-order-content {
     display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
+
+  .swap-order-route-wrap {
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
     position: relative;
     align-items: center;
+
+    .swap-order-route-content {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      align-items: center;
+      flex: 1;
+    }
+
+    .swap-order-route-percent {
+      margin-left: 20px;
+    }
 
     .swap-order-token-icon {
       font-size: 0;
@@ -27,7 +45,7 @@
       display: flex;
       flex-direction: row;
       gap: 4px;
-      background-color: #343948;
+      background-color: #dee2e8;
       align-items: center;
       z-index: 1;
     }
@@ -35,10 +53,30 @@
     .swap-order-dot-line {
       position: absolute;
       top: 50%;
-      border-top: 3px dotted #393d47;
+      border-top: 3px dotted #dee2e8;
       width: 100%;
       transform: translate3d(0, -50%, 0);
       z-index: 0;
     }
+  }
+}
+
+.mobile-site-content {
+  .swap-order-routing {
+    .swap-order-route-wrap {
+      .swap-order-route-percent {
+        margin-left: 12px;
+      }
+    }
+  }
+}
+
+.modal-content-wrap {
+  padding: 20px;
+  padding-top: 0;
+
+  .swap-confirm-modal-btn {
+    margin-top: 20px;
+    width: 100%;
   }
 }
