--- a/packages/react-ui/src/components/Swap/components/InputRow/index.less
+++ b/packages/react-ui/src/components/Swap/components/InputRow/index.less
@@ -11,15 +11,18 @@
   }
   .swap-input-row2 {
     margin-top: 6px;
+    gap: 6px;
     .swap-input-value {
       width: 100%;
       padding: 0;
       font-size: 30px;
       line-height: 40px;
       font-weight: 500;
-        color: #B6BABF;
-        // color: #25272A;
+      color: #B6BABF;
       outline: none;
+      &.swap-input-value-value {
+        color: #25272A;
+      }
       &::placeholder {
         font-size: 30px;
         line-height: 40px;
