--- a/packages/react-ui/src/components/Swap/components/SwapPanel/index.less
+++ b/packages/react-ui/src/components/Swap/components/SwapPanel/index.less
@@ -3,9 +3,6 @@
   // width: 100%;
   width: 375px;
   padding: 24px 16px;
-  // TODO
-  background-color: aquamarine;
-
 
   .swap-token-switch-wrap {
     height: 4px;
@@ -106,6 +103,14 @@
     .price-swap-info-label {
       margin-right: 4px;
       color: #515A62;
+    }
+    .icon-question-icon {
+      width: 16px;
+      height: 16px;
+      svg {
+        width: 100%;
+        height: 100%;
+      }
     }
     .price-swap-info-value {
       font-weight: 500;
