--- a/packages/react-ui/src/components/Swap/components/SwapPanel/index.less
+++ b/packages/react-ui/src/components/Swap/components/SwapPanel/index.less
@@ -2,7 +2,10 @@
   position: relative;
   // width: 100%;
   width: 375px;
-  padding: 24px 16px;
+  padding: 0 24px;
+  &.swap-panel-wrapper-mobile {
+    padding: 0 16px;
+  }
 
   .swap-token-switch-wrap {
     height: 4px;
