style: 💄 ui swap

--- a/packages/react-ui/src/components/CommonModal/index.less
+++ b/packages/react-ui/src/components/CommonModal/index.less
@@ -43,6 +43,9 @@
       transform: translateY(-50%);
       color: var(--ant-black-font-color-1);
       cursor: pointer;
+      &:hover {
+        background-color: #fff;
+      }
     }
 
     .ant-drawer-title {
@@ -76,6 +79,9 @@
       transform: translateY(-50%);
       color: var(--ant-black-font-color-1);
       cursor: pointer;
+      &:hover {
+        background-color: #fff;
+      }
     }
 
     .ant-drawer-title {
