--- a/packages/react-ui/src/components/Logo/index.less
+++ b/packages/react-ui/src/components/Logo/index.less
@@ -1,13 +1,14 @@
 .first-letter {
   border-radius: 50%;
-  background-color: var(--ant-black-font-color-3);
+  background-color: #f7f8f9;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-shrink: 0;
-  color: var(--ant-black-font-color-2);
+  color: #25272a;
   font-size: 16px;
   font-weight: 500;
+  border: 1px solid #c5cbd5;
   &:not(:first-child) {
     margin-left: -4px;
   }
