--- a/packages/react-ui/src/components/Swap/components/InputRow/index.less
+++ b/packages/react-ui/src/components/Swap/components/InputRow/index.less
@@ -47,6 +47,7 @@
       gap: 6px;
       padding: 8px 12px;
       border-radius: 6px;
+      color: #25272A;
       background-color: #DEE2E8;
       cursor: pointer;
       .icon-arrow-up2-icon {
