--- a/packages/react-ui/src/components/Swap/components/SwapPanel/index.less
+++ b/packages/react-ui/src/components/Swap/components/SwapPanel/index.less
@@ -1,11 +1,6 @@
 .swap-panel-wrapper {
   position: relative;
-  // width: 100%;
-  width: 375px;
-  padding: 0 24px;
-  &.swap-panel-wrapper-mobile {
-    padding: 0 16px;
-  }
+  width: 100%;
 
   .swap-token-switch-wrap {
     height: 4px;
