--- a/packages/react-ui/src/components/CommonModal/index.less
+++ b/packages/react-ui/src/components/CommonModal/index.less
@@ -1,26 +1,26 @@
 .common-modal {
-  &.ant-modal {
+  &.portkey-trade-ant-modal {
     padding: 0;
   }
 
-  .ant-modal-content,
-  .ant-modal-header {
+  .portkey-trade-ant-modal-content,
+  .portkey-trade-ant-modal-header {
     border-radius: 8px;
     padding: 0;
   }
 
-  .ant-modal-content,
-  .ant-modal-header,
-  .ant-drawer-content,
-  .ant-drawer-header {
+  .portkey-trade-ant-modal-content,
+  .portkey-trade-ant-modal-header,
+  .portkey-trade-ant-drawer-content,
+  .portkey-trade-ant-drawer-header {
     background-color: #fff;
   }
 
-  .ant-modal-header {
+  .portkey-trade-ant-modal-header {
     border: none;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
-    border-bottom: 1px solid var(--ant-gray-color);
+    border-bottom: 1px solid var(--portkey-trade-ant-gray-color);
     height: 72px;
     padding: 0 24px;
     display: flex;
@@ -33,7 +33,7 @@
       left: 24px;
       top: 50%;
       transform: translateY(-50%);
-      color: var(--ant-black-font-color-1);
+      color: var(--portkey-trade-ant-black-font-color-1);
       cursor: pointer;
     }
     .close-icon-btn {
@@ -41,22 +41,22 @@
       right: 20px;
       top: 50%;
       transform: translateY(-50%);
-      color: var(--ant-black-font-color-1);
+      color: var(--portkey-trade-ant-black-font-color-1);
       cursor: pointer;
       &:hover {
         background-color: #fff;
       }
     }
 
-    .ant-drawer-title {
+    .portkey-trade-ant-drawer-title {
       text-align: center;
     }
   }
 
-  .ant-drawer-header {
+  .portkey-trade-ant-drawer-header {
     border: none;
     border-radius: 0;
-    border-bottom: 1px solid var(--ant-gray-color);
+    border-bottom: 1px solid var(--portkey-trade-ant-gray-color);
     height: 56px;
     flex-basis: 56px;
     padding: 0 16px;
@@ -69,7 +69,7 @@
       left: 12px;
       top: 50%;
       transform: translateY(-50%);
-      color: var(--ant-black-font-color-1);
+      color: var(--portkey-trade-ant-black-font-color-1);
       cursor: pointer;
     }
     .close-icon-btn {
@@ -77,28 +77,28 @@
       right: 14px;
       top: 50%;
       transform: translateY(-50%);
-      color: var(--ant-black-font-color-1);
+      color: var(--portkey-trade-ant-black-font-color-1);
       cursor: pointer;
       &:hover {
         background-color: #fff;
       }
     }
 
-    .ant-drawer-title {
+    .portkey-trade-ant-drawer-title {
       text-align: center;
     }
   }
 
-  .ant-modal-body {
+  .portkey-trade-ant-antmodal-body {
     line-height: 1;
   }
 
-  .ant-drawer-body {
+  .portkey-trade-ant-drawer-body {
     line-height: 1;
     padding: 16px 16px 24px;
   }
 
-  .ant-drawer-content-wrapper {
+  .portkey-trade-ant-drawer-content-wrapper {
     overflow: hidden;
     border-radius: 0;
   }
