--- a/packages/react-ui/src/components/CommonModalHeader/index.less
+++ b/packages/react-ui/src/components/CommonModalHeader/index.less
@@ -1,4 +1,4 @@
-.common-modal-header.ant-modal-header {
+.common-modal-header.portkey-trade-ant-modal-header {
   .back-icon-btn {
     left: 16px;
   }
