--- a/packages/react-ui/src/components/Swap/components/SwapConfirmModal/styles.less
+++ b/packages/react-ui/src/components/Swap/components/SwapConfirmModal/styles.less
@@ -1,10 +1,10 @@
 .swap-confirm-modal {
-  .ant-modal-header {
+  .portkey-trade-ant-modal-header {
     // height: 56px;
     border-bottom: none;
   }
 
-  .ant-modal-body {
+  .portkey-trade-ant-modal-body {
     padding: 0;
   }
 
