--- a/packages/react-ui/src/components/Swap/components/SwapSettingsModal/styles.less
+++ b/packages/react-ui/src/components/Swap/components/SwapSettingsModal/styles.less
@@ -3,7 +3,7 @@
 .transactions-settings-modal {
   width: 430px !important;
 
-  .ant-drawer-header {
+  .portkey-trade-ant-drawer-header {
     border-bottom: none;
   }
 
@@ -12,11 +12,11 @@
     padding-top: 0;
   }
 
-  .ant-modal-body {
+  .portkey-trade-ant-modal-body {
     padding: 0;
   }
 
-  .ant-drawer-body {
+  .portkey-trade-ant-drawer-body {
     padding: 0 16px 64px;
   }
 
@@ -44,7 +44,7 @@
     border: 1px solid #dee2e8;
   }
 
-  .ant-input-affix-wrapper-focused {
+  .portkey-trade-ant-input-affix-wrapper-focused {
     border-color: #5b8ef4;
   }
 
@@ -68,7 +68,7 @@
 .confirm-modal-btnWrap {
   padding-top: 20px;
   width: 100%;
-  .common-button.ant-btn {
+  .common-button.portkey-trade-ant-btn {
     width: 100%;
     background-color: #5b8ef4;
     color: #fff;
