--- a/packages/react-ui/src/components/Swap/components/SwapTipsModal/styles.less
+++ b/packages/react-ui/src/components/Swap/components/SwapTipsModal/styles.less
@@ -2,13 +2,13 @@
 @mobile-content-padding: 16px;
 
 .tips-modal {
-  .ant-modal {
-    .ant-modal-content {
+  .portkey-trade-ant-modal {
+    .portkey-trade-ant-modal-content {
       height: auto !important;
       display: flex;
       flex-direction: column;
 
-      .ant-modal-body {
+      .portkey-trade-ant-modal-body {
         padding-bottom: 0;
       }
     }
