--- a/packages/react-ui/src/components/CommonButton/index.less
+++ b/packages/react-ui/src/components/CommonButton/index.less
@@ -1,4 +1,4 @@
-.common-button.ant-btn {
+.common-button.portkey-trade-ant-btn {
   height: 48px;
   border-radius: 24px;
   padding: 0 24px;
@@ -9,76 +9,76 @@
   text-shadow: none !important;
   box-shadow: none !important;
 
-  .ant-image {
+  .portkey-trade-ant-image {
     margin-right: 4px;
   }
 
-  &.ant-btn-default {
+  &.portkey-trade-ant-btn-default {
     border: none;
     color: #ffffff;
     background-color: #5b8ef4;
     &:hover {
-      background-color: var(--ant-button-gray-hover-color);
+      background-color: var(--portkey-trade-ant-button-gray-hover-color);
     }
   }
 
-  &.ant-btn-text {
-    color: var(--ant-black-font-color-1);
+  &.portkey-trade-ant-btn-text {
+    color: var(--portkey-trade-ant-black-font-color-1);
     &:hover {
-      color: var(--ant-primary-color);
+      color: var(--portkey-trade-ant-primary-color);
       svg {
-        stroke: var(--ant-primary-color);
+        stroke: var(--portkey-trade-ant-primary-color);
 
         * {
-          stroke: var(--ant-primary-color);
+          stroke: var(--portkey-trade-ant-primary-color);
         }
       }
     }
   }
 
-  &.ant-btn-ghost {
-    border: 1px solid var(--ant-button-ghost-border-color);
-    color: var(--ant-primary-font-color);
+  &.portkey-trade-ant-btn-ghost {
+    border: 1px solid var(--portkey-trade-ant-button-ghost-border-color);
+    color: var(--portkey-trade-ant-primary-font-color);
     // &:hover {
-    //   background-color: var(--ant-button-gray-hover-color);
+    //   background-color: var(--portkey-trade-ant-button-gray-hover-color);
     // }
   }
 
-  &.ant-btn-icon-only {
+  &.portkey-trade-ant-btn-icon-only {
     padding: 0;
-    color: var(--ant-black-font-color-1);
+    color: var(--portkey-trade-ant-black-font-color-1);
     &:hover {
-      color: var(--ant-primary-color);
+      color: var(--portkey-trade-ant-primary-color);
       svg {
-        stroke: var(--ant-primary-color);
+        stroke: var(--portkey-trade-ant-primary-color);
 
         * {
-          stroke: var(--ant-primary-color);
+          stroke: var(--portkey-trade-ant-primary-color);
         }
       }
     }
   }
 
   &[disabled],
-  &.ant-btn-primary[disabled] {
-    background-color: var(--ant-button-gray-color);
-    border-color: var(--ant-button-gray-color);
-    color: var(--ant-black-font-color-2);
+  &.portkey-trade-ant-btn-primary[disabled] {
+    background-color: var(--portkey-trade-ant-button-gray-color);
+    border-color: var(--portkey-trade-ant-button-gray-color);
+    color: var(--portkey-trade-ant-black-font-color-2);
   }
 }
 
-.common-button-lg.ant-btn {
+.common-button-lg.portkey-trade-ant-btn {
   height: 48px;
   font-size: 16px;
 }
 
-.common-button-sm.ant-btn {
+.common-button-sm.portkey-trade-ant-btn {
   height: 28px;
   padding: 0 8px;
   font-size: 14px;
 }
 
-.common-button-ellipsis.common-button.ant-btn {
+.common-button-ellipsis.common-button.portkey-trade-ant-btn {
   & > span {
     flex: 0 1 auto;
     overflow: hidden;
@@ -87,7 +87,7 @@
   }
 }
 
-button[ant-click-animating-without-extra-node]::after {
+button[portkey-trade-ant-click-animating-without-extra-node]::after {
   border: 0 none;
   opacity: 0;
   animation: none 0 ease 0 1 normal;
