--- a/packages/react-ui/src/components/CommonTooltip/styles.less
+++ b/packages/react-ui/src/components/CommonTooltip/styles.less
@@ -6,7 +6,7 @@
     height: 16px;
     background-size: 100% 100%;
   }
-  &.ant-tooltip-open {
+  &.portkey-trade-ant-tooltip-open {
     .common-question {
       background-image: url('../../assets/icons/icon-question-hover.svg');
     }
@@ -14,36 +14,30 @@
 }
 
 .common-tooltip {
-  &.ant-tooltip {
+  &.portkey-trade-ant-tooltip {
     z-index: 10;
   }
-  .ant-tooltip-arrow {
+  .portkey-trade-ant-tooltip-arrow {
     &::before {
-      background-color: #FFFFFF;
+      background-color: #ffffff;
     }
   }
-  .ant-tooltip-inner {
+  .portkey-trade-ant-tooltip-inner {
     padding: 12px 16px;
-    background-color: #FFFFFF;
-    color: #515A62;
+    background-color: #ffffff;
+    color: #515a62;
     font-size: 12px;
     line-height: 18px;
     border-radius: 4px;
   }
 }
 
-
 .common-tooltip-error {
-  .ant-tooltip-inner {
+  .portkey-trade-ant-tooltip-inner {
     padding: 8px 12px;
     background-color: rgb(228 53 85 / 16%);
-    color: #FF496A;
+    color: #ff496a;
     font-size: 12px;
     line-height: 18px;
-  }
-  .ant-tooltip-arrow-content {
-    &::before {
-      background: rgb(228 53 85 / 16%);
-    }
   }
 }
