--- a/packages/react-ui/src/components/Swap/components/InputRow/index.less
+++ b/packages/react-ui/src/components/Swap/components/InputRow/index.less
@@ -2,12 +2,14 @@
   width: 100%;
   padding: 20px 12px;
   border-radius: 6px;
-  background-color: #F7F7F9;
+  background-color: #f7f7f9;
+
+  
 
   .swap-input-row1 {
     font-size: 14px;
     line-height: 22px;
-    color: #515A62;
+    color: #515a62;
   }
   .swap-input-row2 {
     margin-top: 6px;
@@ -18,23 +20,23 @@
       font-size: 30px;
       line-height: 40px;
       font-weight: 500;
-      color: #B6BABF;
+      color: #b6babf;
       outline: none;
       &.swap-input-value-value {
-        color: #25272A;
+        color: #25272a;
       }
       &::placeholder {
         font-size: 30px;
         line-height: 40px;
         font-weight: 500;
-        color: #B6BABF;
+        color: #b6babf;
       }
     }
     .select-token-wrap {
       padding: 8px 12px;
       gap: 12px;
       border-radius: 6px;
-      background-color: #5B8EF4;
+      background-color: #5b8ef4;
       cursor: pointer;
       .select-token-wrap-text {
         font-size: 16px;
@@ -47,8 +49,8 @@
       gap: 6px;
       padding: 8px 12px;
       border-radius: 6px;
-      color: #25272A;
-      background-color: #DEE2E8;
+      color: #25272a;
+      background-color: #dee2e8;
       cursor: pointer;
       .icon-arrow-up2-icon {
         transform: rotate(180deg);
@@ -57,10 +59,12 @@
   }
   .swap-input-row3 {
     margin-top: 6px;
-    .value-in-usd, .balance-show, .usd-suffix-show {
+    .value-in-usd,
+    .balance-show,
+    .usd-suffix-show {
       font-size: 12px;
       line-height: 18px;
-      color: #515A62;
+      color: #515a62;
     }
     .usd-suffix-show {
       margin-left: 8px;
@@ -71,11 +75,10 @@
       font-size: 13px;
       line-height: 14px;
       font-weight: 500;
-      color: #5B8EF4;
+      color: #5b8ef4;
       border-radius: 4px;
-      border: 1px solid #5B8EF4;
+      border: 1px solid #5b8ef4;
       cursor: pointer;
     }
   }
-
 }
