--- a/packages/react-ui/src/components/Swap/components/SelectTokenModal/styles.less
+++ b/packages/react-ui/src/components/Swap/components/SelectTokenModal/styles.less
@@ -3,12 +3,12 @@
 
 .select-token-modal,
 .select-token-modal-m {
-  .ant-modal-body,
-  .ant-drawer-body {
+  .portkey-trade-ant-modal-body,
+  .portkey-trade-ant-drawer-body {
     padding: 0;
     flex: 1;
 
-    .ant-carousel {
+    .portkey-trade-ant-carousel {
       width: 100%;
       height: 100%;
       .slick-slider,
@@ -55,7 +55,7 @@
         padding-right: @content-padding;
       }
 
-      .ant-list-item.token-list-item {
+      .portkey-trade-ant-list-item.token-list-item {
         padding-left: @content-padding;
         padding-right: @content-padding;
       }
@@ -71,8 +71,8 @@
         height: 58px;
         padding: 8px 0;
         &:hover {
-          background-color: var(--ant-container-bg-color-2);
-          box-shadow: 24px 0 var(--ant-container-bg-color-2), -24px 0 var(--ant-container-bg-color-2);
+          background-color: var(--portkey-trade-ant-container-bg-color-2);
+          box-shadow: 24px 0 var(--portkey-trade-ant-container-bg-color-2), -24px 0 var(--portkey-trade-ant-container-bg-color-2);
         }
         .token-name {
           margin-left: 8px;
@@ -81,7 +81,7 @@
     }
   }
 
-  .ant-modal-header {
+  .portkey-trade-ant-modal-header {
     border-bottom: none;
     padding-left: 0;
   }
@@ -113,18 +113,18 @@
           }
 
           &:hover {
-            background-color: var(--ant-container-bg-color-2);
+            background-color: var(--portkey-trade-ant-container-bg-color-2);
           }
         }
         &-mobile {
           height: 324px;
         }
-        .ant-row {
+        .portkey-trade-ant-row {
           padding: 0;
         }
 
         .select-token-list-item-active {
-          background-color: var(--ant-container-bg-color-2);
+          background-color: var(--portkey-trade-ant-container-bg-color-2);
         }
       }
     }
@@ -142,34 +142,34 @@
 }
 
 .select-token-list.token-list-large {
-  .ant-list-items {
+  .portkey-trade-ant-list-items {
     padding-right: 14px;
   }
 }
 
-.select-token-modal.ant-modal {
-  .ant-modal-content {
+.select-token-modal.portkey-trade-ant-modal {
+  .portkey-trade-ant-modal-content {
     height: 632px;
     display: flex;
     flex-direction: column;
 
-    .ant-modal-body {
+    .portkey-trade-ant-modal-body {
       padding-bottom: 0;
     }
   }
 }
 
-.select-token-modal-m.ant-drawer {
-  .ant-drawer-content {
+.select-token-modal-m.portkey-trade-ant-drawer {
+  .portkey-trade-ant-drawer-content {
     height: 540px;
     max-height: calc(100vh - 48px);
 
-    .ant-drawer-wrapper-body {
+    .portkey-trade-ant-drawer-wrapper-body {
       height: 100%;
     }
   }
 
-  .ant-drawer-header {
+  .portkey-trade-ant-drawer-header {
     border-bottom: none;
     line-height: 24px;
   }
@@ -177,14 +177,14 @@
   .common-input {
     border-radius: 4px;
   }
-  .ant-drawer-body {
+  .portkey-trade-ant-drawer-body {
     padding: 0;
     flex: 1;
 
-    .modal-panel .ant-modal-header.common-modal-header,
+    .modal-panel .portkey-trade-ant-modal-header.common-modal-header,
     .select-token-box .input-row,
     .select-token-box .select-token-button-row,
-    .select-token-box .list-row .ant-list-items > .ant-list-item {
+    .select-token-box .list-row .portkey-trade-ant-list-items > .portkey-trade-ant-list-item {
       padding-left: @mobile-content-padding;
       padding-right: @mobile-content-padding;
     }
@@ -194,7 +194,7 @@
       &::-webkit-scrollbar {
         display: none;
       }
-      .ant-list-items {
+      .portkey-trade-ant-list-items {
         padding-right: 0;
       }
     }
@@ -214,7 +214,7 @@
       padding-right: @mobile-content-padding;
     }
 
-    .ant-list-item.token-list-item {
+    .portkey-trade-ant-list-item.token-list-item {
       padding-left: @mobile-content-padding;
       padding-right: @mobile-content-padding;
     }
