--- a/packages/react-ui/src/components/Swap/components/SwapOrderRouting/styles.less
+++ b/packages/react-ui/src/components/Swap/components/SwapOrderRouting/styles.less
@@ -33,6 +33,9 @@
     .swap-order-token-icon {
       font-size: 0;
       z-index: 1;
+      display: flex;
+      text-align: center;
+      align-items: center;
     }
 
     .currency-logo {
